--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
   "prettier.jsxBracketSameLine": true,
   "editor.formatOnSave": true,
   "prettier.jsxSingleQuote": true,
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "cSpell.words": [
+    "firestore",
+    "rerender",
+    "rerenders"
+  ]
 }
